Use URLs with transport encryption

--- a/doc/man-kmouth.1.docbook
+++ b/doc/man-kmouth.1.docbook
@@ -63,7 +63,7 @@ url="help:/kmouth">help:/kmouth</ulink>
 <parameter>help:/kmouth</parameter></userinput>).</para>
 
 <para>There is also further information available at the <ulink
-url="http://accessibility.kde.org/">&kde; Accessibility project web
+url="https://community.kde.org/Accessibility">&kde; Accessibility project web
 site</ulink>.</para>
 </refsect1>
 
